@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.368 2013/01/26 22:28:38 ryoon Exp $
+$NetBSD: CHANGES-2013,v 1.369 2013/01/27 00:13:28 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -459,3 +459,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated devel/p5-Log-Dispatch to 2.35 [rhaen 2013-01-26]
 	Updated www/p5-Catalyst-Manual to 5.9006 [rhaen 2013-01-26]
 	Updated converters/dos2unix to 6.0.3 [ryoon 2013-01-26]
+	Removed audio/akode-plugins-ffmpeg [wiz 2013-01-27]
